test_suite/ui/invalid_attribute_syntax.stderr
error: expected `|`
 --> $DIR/invalid_attribute_syntax.rs:3:24
  |
3 | #[bitflags(default = A + B)]
  |                        ^

error: unexpected end of input, expected identifier
 --> $DIR/invalid_attribute_syntax.rs:9:1
  |
9 | #[bitflags(default = A |)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, expected identifier
  --> $DIR/invalid_attribute_syntax.rs:15:1
   |
15 | #[bitflags(default =)]
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `=`
  --> $DIR/invalid_attribute_syntax.rs:21:1
   |
21 | #[bitflags(default)]
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `default`
  --> $DIR/invalid_attribute_syntax.rs:27:12
   |
27 | #[bitflags(yes)]
   |            ^^^
